--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,20 @@ language: cpp
 matrix:
   include:
   - os: linux
-    env: CXX=g++-6
+    env: CXX=g++-6 CC=gcc-6
     addons:
       apt:
         packages: ["g++-6", "libstdc++-6-dev", "gdb"]
         sources: ["ubuntu-toolchain-r-test"]
   - os: linux
-    env: CXX=clang++-3.9
+    env: CXX=clang++-3.9 CC=clang-3.9
     addons:
       apt:
         packages: ["clang-3.9", "libstdc++-5-dev", "gdb"]
         sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise"]
 
 script:
-  make all
+  - if [ "${CXX}" != "" ]; then (travis_wait make all); fi
   # todo: build tests and run it
   # todo: build with emcc
 
