--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,57 @@
-sudo: false
-
+# Ubuntu 14.04 Trusty support
+sudo: required
+dist: trusty
 language: cpp
 
 matrix:
   include:
-  - os: linux
-    env: CXX=g++-6 CC=gcc-6
-    addons:
-      apt:
-        packages: ["g++-6", "libstdc++-6-dev", "gdb"]
-        sources: ["ubuntu-toolchain-r-test"]
-  - os: linux
-    env: CXX=clang++-3.9 CC=clang-3.9
-    addons:
-      apt:
-        packages: ["clang-3.9", "libstdc++-5-dev", "gdb"]
-        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise"]
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env: COMPILER=g++-4.9
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env: COMPILER=g++-5
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.6
+          packages:
+            - clang-3.6
+      env: COMPILER=clang++-3.6
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.7
+          packages:
+            - clang-3.7
+      env: COMPILER=clang++-3.7
+  
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y emscripten
+
+install:
+  #- if [ "${CXX}" = "g++" ]; then export CXX="" CC="gcc-5"; fi
+  #- if [ "${CXX}" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
 
 script:
-  - if [ "${CXX}" != "" ]; then (travis_wait make all); fi
+
+
+  - if [ "${COMPILER}" != "" ]; then (travis_wait make -DCC=$COMPILER all); fi
   # todo: build tests and run it
   # todo: build with emcc
 
