--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-# Ubuntu 14.04 Trusty support
 sudo: required
-dist: trusty
+# Ubuntu 14.04 Trusty support
+# dist: trusty
 language: cpp
 
 matrix:
@@ -41,7 +41,11 @@ matrix:
       #env: COMPILER=clang++-3.7
 
 before_install:
+  - git config --global user.name "michael miller"
+  - git config --global user.email "MichaelMiller-@users.noreply.github.com"
+  - git config --global push.default simple
   - sudo apt-get update -qq
+  - sudo apt-get install -y libsdl2-dev
   - sudo apt-get install -y emscripten
 
 install:
@@ -49,6 +53,12 @@ install:
 
 script:
   - if [ "${CXX}" != "" ]; then (travis_wait make all); fi
+
+  #- if [ "${CXX}" != "" ] && [ "${COVERAGE}" == "" ]; then (travis_wait make test example); fi
+  #- if [ "${CXX}" != "" ] && [ "${COVERAGE}" != "" ]; then (travis_wait make test); fi
+
+  #- if [ "${TRAVIS_BRANCH}" == "master" ]; then (git clone https://github.com/boost-experimental/sml && cd sml && rm -rf *); fi
+
   # todo: build tests and run it
   # todo: build with emcc
 
