--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ before_install:
   - git config --global user.email "MichaelMiller-@users.noreply.github.com"
   - git config --global push.default simple
   - sudo apt-get update -qq
+  - sudo apt-get install -y premake4
   - sudo apt-get install -y libsdl2-dev
   - sudo apt-get install -y emscripten
 
