--- a/.travis.yml
+++ b/.travis.yml
@@ -1,64 +1,31 @@
-sudo: required
-# Ubuntu 14.04 Trusty support
-# dist: trusty
-language: cpp
 
 matrix:
+  fast_finish: true
   include:
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-4.9
-      env: COMPILER=g++-4.9
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-5
-      env: COMPILER=g++-5
-    #- compiler: clang
-      #addons:
-       # apt:
-        #  sources:
-         #   - ubuntu-toolchain-r-test
-          #  - llvm-toolchain-precise-3.6
-          #packages:
-            #- clang-3.6
-      #env: COMPILER=clang++-3.6
-    #- compiler: clang
-      #addons:
-        #apt:
-          #sources:
-            #- ubuntu-toolchain-r-test
-            #- llvm-toolchain-precise-3.7
-          #packages:
-            #- clang-3.7
-      #env: COMPILER=clang++-3.7
+  - os: linux
+    env: COMPILER=g++-4.9
+    addons:
+      apt:
+        packages: ["g++-4.9"]
+        sources: ["ubuntu-toolchain-r-test"]
+  - os: linux
+    env: COMPILER=g++-5
+    addons:
+      apt:
+        packages: ["g++-5"]
+        sources: ["ubuntu-toolchain-r-test"]
 
-before_install:
-  - git config --global user.name "michael miller"
-  - git config --global user.email "MichaelMiller-@users.noreply.github.com"
-  - git config --global push.default simple
+before_script:
+  - echo "yes" | sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu trusty main universe restricted multiverse"
   - sudo apt-get update -qq
-  - sudo apt-get install -y premake4
-  - sudo apt-get install -y libsdl2-dev
+  - sudo apt-get -qq install libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev
   - sudo apt-get install -y emscripten
 
 install:
   - export CXX="${COMPILER}"
 
 script:
-  - if [ "${CXX}" != "" ]; then (travis_wait make all); fi
-
-  #- if [ "${CXX}" != "" ] && [ "${COVERAGE}" == "" ]; then (travis_wait make test example); fi
-  #- if [ "${CXX}" != "" ] && [ "${COVERAGE}" != "" ]; then (travis_wait make test); fi
-
-  #- if [ "${TRAVIS_BRANCH}" == "master" ]; then (git clone https://github.com/boost-experimental/sml && cd sml && rm -rf *); fi
+  - if [ "${CXX}" != "" ]; then (travis_wait mkdir build && cd build && cmake .. && cmake --build . && test); fi
 
   # todo: build tests and run it
   # todo: build with emcc
