--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+language:
+  cpp
 
 matrix:
   fast_finish: true
@@ -30,10 +32,9 @@ script:
   # todo: build tests and run it
   # todo: build with emcc
 
-after_success:
+# after_success:
   # todo: push emcc result to webhost
 
 notifications:
   email:
     - miller.michael@gmx.de
-  on_start: false
