--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ language:
 
 matrix:
   fast_finish: true
+
   include:
   - os: linux
-    env: COMPILER=g++-4.9
+    env: COMPILER=clang++-3.5
     addons:
       apt:
-        packages: ["g++-4.9"]
-        sources: ["ubuntu-toolchain-r-test"]
+        packages: ["clang++-3.5"]
+        sources: ['llvm-toolchain-precise-3.5', "ubuntu-toolchain-r-test"]
+
   - os: linux
     env: COMPILER=g++-5
     addons:
