--- a/.github/workflows/gcc11.yml
+++ b/.github/workflows/gcc11.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
         sudo apt install gcc-11
+        sudo apt install libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev
         export CXX=g++-11.0
         g++ --version
 
