--- a/.github/workflows/clang10.yml
+++ b/.github/workflows/clang10.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        config: [Debug, Release]
+        config: [Release]
 
     steps:
       - uses: actions/checkout@v2
