--- a/.github/workflows/gcc10.yml
+++ b/.github/workflows/gcc10.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        config: [Debug, Release]
+        config: [Release]
 
     steps:
     - uses: actions/checkout@v2
