--- a/.github/workflows/deployment.trunk.yml
+++ b/.github/workflows/deployment.trunk.yml
@@ -26,7 +26,7 @@ jobs:
         ./emsdk activate latest
         source ./emsdk_env.sh
         emcc -v
-        export PATH
+        export $PATH:/home/runner/work/orpg/emsdk/upstream/bin
 
     - name: Install Dependencies
       shell: bash
