--- a/.github/workflows/deployment.trunk.yml
+++ b/.github/workflows/deployment.trunk.yml
@@ -26,8 +26,7 @@ jobs:
         ./emsdk activate latest
         source ./emsdk_env.sh
         emcc -v
-        ls $EMSDK
-        export $PATH
+        ls /home/runner/work/orpg/emsdk/upstream/bin
 
     - name: Install Dependencies
       shell: bash
