--- a/.github/workflows/deployment.trunk.yml
+++ b/.github/workflows/deployment.trunk.yml
@@ -26,7 +26,7 @@ jobs:
         ./emsdk activate latest
         source ./emsdk_env.sh
         emcc -v
-        ls /home/runner/work/orpg/emsdk/upstream/bin
+        ls /home/runner/work/orpg/emsdk/upstream/bin -al
         echo ${{ env.PATH }}
 
     - name: Install Dependencies
