add path to emsdk to environment

--- a/.github/workflows/deployment.trunk.yml
+++ b/.github/workflows/deployment.trunk.yml
@@ -28,6 +28,7 @@ jobs:
         emcc -v
         ls /home/runner/work/orpg/emsdk/upstream/bin -al
         echo ${{ env.PATH }}
+        echo "/home/runner/work/orpg/emsdk/upstream/bin" >> $GITHUB_PATH
 
     - name: Install Dependencies
       shell: bash
