install locate command

--- a/.github/workflows/deployment.trunk.yml
+++ b/.github/workflows/deployment.trunk.yml
@@ -14,7 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
+    - name: Install locate
+      shell: bash
+      run: |
+        apt-get install mlocate
+        updatedb
+        
     - name: Install emsdk
       shell: bash
       working-directory: ${{runner.workspace}}
@@ -26,6 +31,7 @@ jobs:
         ./emsdk activate latest
         source ./emsdk_env.sh
         emcc -v
+        locate emcc
         ls /home/runner/work/orpg/emsdk/upstream/bin -al
         echo ${{ env.PATH }}
         echo "/home/runner/work/orpg/emsdk/upstream/bin" >> $GITHUB_PATH
