--- a/.github/workflows/code.analysis.msvc.yml
+++ b/.github/workflows/code.analysis.msvc.yml
@@ -13,8 +13,8 @@ on:
     branches: [ $default-branch, $protected-branches ]
   pull_request:
     branches: [ $default-branch ]
-  schedule:
-    - cron: $cron-weekly
+#  schedule:
+ #   - cron: $cron-weekly
 
 env:
   # Path to the CMake build directory.
