disable audio support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ if (EMSCRIPTEN)
           -D BUILD_EXAMPLES=OFF
           -D OPENGL_VERSION=OFF
           -D USE_EXTERNAL_GLFW=OFF
+          -D USE_AUDIO=OFF
           -D CMAKE_BUILD_TYPE=Release
           -D CMAKE_TOOLCHAIN_FILE:PATH=${VCPKG_CHAINLOAD_TOOLCHAIN_FILE}
           -D CMAKE_INSTALL_PREFIX:PATH=${CMAKE_CURRENT_BINARY_DIR}
