add EnTT dependency

--- a/.github/workflows/deployment.trunk.yml
+++ b/.github/workflows/deployment.trunk.yml
@@ -35,6 +35,7 @@ jobs:
         ./bootstrap-vcpkg.sh
         ./vcpkg install spdlog:wasm32-emscripten
         ./vcpkg install nlohmann-json:wasm32-emscripten
+        ./vcpkg install entt:wasm32-emscripten
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
