add raygui and EnTT dependency use interface2sec21 wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,60 +4,24 @@ project(orpg
         DESCRIPTION "Multiplayer RPG"
         )
 
+
+add_subdirectory(interface2sec21)
+# add_subdirectory(interface2raylib)
+
+include(GNUInstallDirs)
+include(FetchContent)
 include(CMakePrintHelpers)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-
-include(ExternalProject)
-#ExternalProject_Add(
-#        sec21-external
-#        GIT_REPOSITORY https://github.com/MichaelMiller-/sec21
-#        GIT_PROGRESS TRUE
-#        #        STEP_TARGETS configure
-#        # DEPENDS orpg
-#        CMAKE_ARGS -Wno-dev
-#        -D BUILD_TESTING=OFF
-#        -D CMAKE_BUILD_TYPE=Release
-#        -D CMAKE_TOOLCHAIN_FILE:PATH=${CMAKE_TOOLCHAIN_FILE}
-#        -D CMAKE_INSTALL_PREFIX:PATH=${CMAKE_CURRENT_BINARY_DIR}
-#)
-
-# ExternalProject_Get_property(sec21-external INSTALL_DIR)
-# ExternalProject_Get_property(sec21-external SOURCE_DIR)
-# cmake_print_variables(INSTALL_DIR)
-
-# ExternalProject_Add_Step(sec21-external configure
-#         COMMAND ${CMAKE_COMMAND} -Wno-dev -D BUILD_TESTING=OFF
-#         COMMAND ${CMAKE_COMMAND} --build <BINARY_DIR>
-# )
-# ExternalProject_Add_StepTargets(sec21-external configure)
-
-list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
-list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_BINARY_DIR}/sec21-install-dir/lib/cmake/sec21)
-list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_BINARY_DIR}/lib/cmake/sec21)
-list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_BINARY_DIR}/lib/cmake/raylib)
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_BINARY_DIR}/lib/cmake/raylib)
-# list(APPEND CMAKE_PREFIX_PATH /home/michael/dev/sec21/cmake-build-debug/fooinstall/lib/cmake/sec21)
-# list(APPEND CMAKE_MODULE_PATH /home/michael/dev/sec21/cmake-build-debug/fooinstall/lib/cmake/sec21)
-# list(APPEND CMAKE_PREFIX_PATH ${PROJECT_SOURCE_DIR}/cmake)
-
-cmake_print_variables(CMAKE_MODULE_PATH)
-cmake_print_variables(CMAKE_PREFIX_PATH)
 
 configure_file(${PROJECT_SOURCE_DIR}/src/config.h.in ${PROJECT_BINARY_DIR}/config.h)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
 
-# add_dependencies(${PROJECT_NAME} sec21-external)
-# ExternalProject_Add_StepDependencies(${PROJECT_NAME} configure sec21-external)
-# ExternalProject_Add_StepDependencies(secretsauce build foobar)
-
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
 target_include_directories(${PROJECT_NAME}
-        PRIVATE src/inc
-        PRIVATE ${PROJECT_BINARY_DIR}
-        PRIVATE ${PROJECT_BINARY_DIR}/include)
+        PRIVATE src
+        PRIVATE ${PROJECT_BINARY_DIR})
 
 if (EMSCRIPTEN)
   ## TODO: as of April 2022 vcpkg has no working raylib:wasm32-emspripten package, therefore use this workaround
@@ -93,14 +57,27 @@ else()
   find_package(raylib CONFIG REQUIRED)
 endif ()
 
+## raygui
+FetchContent_Declare(
+        raygui
+        GIT_REPOSITORY https://github.com/raysan5/raygui
+        GIT_PROGRESS TRUE
+)
+if (NOT raygui_POPULATED)
+  FetchContent_Populate(raygui)
+  target_include_directories(${PROJECT_NAME} PRIVATE ${raygui_SOURCE_DIR}/src)
+endif()
+
 find_package(spdlog CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
-# find_package(sec21 CONFIG REQUIRED)
+find_package(EnTT CONFIG REQUIRED)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE spdlog::spdlog spdlog::spdlog_header_only)
 target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
+# target_link_libraries(${PROJECT_NAME} PRIVATE interface2raylib)
 target_link_libraries(${PROJECT_NAME} PRIVATE raylib)
-# target_link_libraries(${PROJECT_NAME} PRIVATE sec21::sec21)
+target_link_libraries(${PROJECT_NAME} PRIVATE interface2sec21)
+target_link_libraries(${PROJECT_NAME} PRIVATE EnTT::EnTT)
 
 include(CTest)
 if (BUILD_TESTING) # option is created by CTest
