--- a/.github/workflows/gcc10.yml
+++ b/.github/workflows/gcc10.yml
@@ -27,6 +27,7 @@ jobs:
         sudo apt install gcc-10
         sudo apt install libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev
         g++ --version
+        sudo apt install -y libboost-all-dev
 
     - name: Install Dependencies
       shell: bash
