--- a/.github/workflows/gcc11.yml
+++ b/.github/workflows/gcc11.yml
@@ -29,6 +29,7 @@ jobs:
         sudo apt install libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev
         export CXX=g++-11.0
         g++ --version
+        sudo apt install -y libboost-all-dev
 
     - name: Install Dependencies
       shell: bash
