--- a/.github/workflows/gcc11.yml
+++ b/.github/workflows/gcc11.yml
@@ -42,6 +42,7 @@ jobs:
         ./vcpkg install nlohmann-json
         ./vcpkg install spdlog
         ./vcpkg install raylib
+        ./vcpkg install entt
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
