--- a/.github/workflows/deployment.trunk.yml
+++ b/.github/workflows/deployment.trunk.yml
@@ -36,6 +36,7 @@ jobs:
         ./vcpkg install spdlog:wasm32-emscripten
         ./vcpkg install nlohmann-json:wasm32-emscripten
         ./vcpkg install entt:wasm32-emscripten
+        ./vcpkg install sol2:wasm32-emscripten
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
