--- a/src/config.h.in
+++ b/src/config.h.in
@@ -4,4 +4,4 @@
 #define VERSION_MINOR @orpg_VERSION_MINOR@
 
 constexpr char EXECUTABLE_NAME[] = "@PROJECT_NAME@";
-constexpr char BINARY_DIRECTORY[] = "@CMAKE_RUNTIME_OUTPUT_DIRECTORY@";
+constexpr char BINARY_DIRECTORY[] = "@PROJECT_BINARY_DIR@";
