--- a/.github/workflows/msvc2019.yml
+++ b/.github/workflows/msvc2019.yml
@@ -3,17 +3,16 @@ name: MSVC 2019
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 env:
-  CTEST_OUTPUT_ON_FAILURE: 1
+  VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
 
 jobs:
-
-  VS2019:
+  build-and-test:
     runs-on: windows-2019
 
     strategy:
@@ -21,41 +20,33 @@ jobs:
         config: [Debug, Release]
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Install Dependencies
-      working-directory: ${{runner.workspace}}
-      run: |
-        git clone https://github.com/Microsoft/vcpkg.git 
-        cd vcpkg
-        bootstrap-vcpkg.bat
-        vcpkg install boost-core
-        vcpkg install boost-function-types 
-        vcpkg install boost-geometry
-        vcpkg install boost-hana
-        vcpkg install boost-math
-        vcpkg install boost-program-options
-        vcpkg install boost-qvm
-        vcpkg install boost-range
-        vcpkg install boost-ublas
-        vcpkg install catch2
-        vcpkg install glm
-        vcpkg install nlohmann-json
-        vcpkg install spdlog
-        vcpkg install eigen3
+      - name: Install Dependencies
+        working-directory: ${{runner.workspace}}
+        run: |
+          git clone https://github.com/Microsoft/vcpkg.git 
+          cd vcpkg
+          bootstrap-vcpkg.bat
+          vcpkg install catch2
+          vcpkg install nlohmann-json
+          vcpkg install spdlog
+          vcpkg install entt
+          vcpkg install raylib
+          vcpkg install michaelmiller-sec21
 
-    - name: Create Build Environment
-      run: cmake -E make_directory ${{runner.workspace}}/build
+      - name: Create Build Environment
+        run: cmake -E make_directory ${{runner.workspace}}/build
 
-    - name: Configure CMake
-      shell: bash
-      working-directory: ${{runner.workspace}}/build
-      run: cmake .. -DCMAKE_BUILD_TYPE=${{matrix.config}} -DCMAKE_TOOLCHAIN_FILE=${{runner.workspace}}\vcpkg\scripts\buildsystems\vcpkg.cmake
+      - name: Configure CMake
+        shell: bash
+        working-directory: ${{runner.workspace}}/build
+        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=${{matrix.config}} -DCMAKE_TOOLCHAIN_FILE=$GITHUB_WORKSPACE\vcpkg\scripts\buildsystems\vcpkg.cmake
 
-    - name: Build
-      working-directory: ${{runner.workspace}}/build
-      run: cmake --config ${{matrix.config}} -j4
+      - name: Build
+        working-directory: ${{runner.workspace}}/build
+        run: cmake --config ${{matrix.config}} -j4
 
-    - name: Test
-      working-directory: ${{runner.workspace}}/build
-      run: ctest --build-config ${{matrix.config}}
+      - name: Test
+        working-directory: ${{runner.workspace}}/build
+        run: ctest --build-config ${{matrix.config}}
